--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
 		<script>
 			// Hardcodierte Zielwerte (Leerzeichen/Reihenfolge egal; Groß-/Kleinschreibung egal)
-			const EXPECTED_VALUES = ["11", "22", "33ff"];
+			const EXPECTED_VALUES = ["2FA361", "2SE533", "3SE069"];
 			const EXPECTED_VALUES_NORMALIZED = EXPECTED_VALUES.map((v) => v.toLowerCase());
 
 			const inputEl = document.getElementById("codes");
