--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
 		<script>
 			// Hardcodierte Zielwerte (Leerzeichen/Reihenfolge egal; Groß-/Kleinschreibung egal)
-			const EXPECTED_VALUES = ["2FA361", "2SE533", "3SE069"];
+			const EXPECTED_VALUES = ["2FA361", "2SE533", "Refs"];
 			const EXPECTED_VALUES_NORMALIZED = EXPECTED_VALUES.map((v) => v.toLowerCase());
 
 			const inputEl = document.getElementById("codes");
@@ -483,16 +483,15 @@
 					statusEl.className = "badge ok";
 					statusEl.textContent = "status: PASST, BRUDER";
 					messageEl.className = "msg ok";
-					messageEl.textContent =
-						"Wallah, richtig. Tür ist auf. Neon flackert — und du bist drin. Jetzt leise, Bruder.";
-          return;
-        }
+					messageEl.textContent = "Wallah, korrekt! Bück dich mal! Guck unter Tisch bei den Bres. Siehst du das? Das ist Goooold! Reines Gold für euch.";
+				return;
+			}
 
 				statusEl.className = "badge bad";
 				statusEl.textContent = "status: FALSCH, AMK";
 				messageEl.className = "msg bad";
 				messageEl.textContent =
-					"Falscher Code. Tür bleibt zu. Versuch’s nochmal — sauber und ohne Stress.";
+					"Falsch, Bruder. Die sind clean";
 			}
 
 			function shakeCard() {
